--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     // Needs for some velocity methods.
     compileOnly("io.netty:netty-codec:4.1.77.Final")
     compileOnly("io.netty:netty-handler:4.1.77.Final")
+    compileOnly("io.netty:netty-transport-native-epoll:4.1.77.Final")
     compileOnly("it.unimi.dsi:fastutil-core:8.5.8")
 }
 
