--- a/build.gradle
+++ b/build.gradle
@@ -36,15 +36,15 @@ repositories {
 
 dependencies {
     api("net.elytrium:elytrium-java-commons:1.0.5")
-    compileOnly("com.velocitypowered:velocity-api:3.1.2-SNAPSHOT")
-    compileOnly("com.velocitypowered:velocity-proxy:3.1.2-SNAPSHOT")
-    compileOnly("com.velocitypowered:velocity-native:3.1.2-SNAPSHOT")
-    compileOnly("com.github.spotbugs:spotbugs-annotations:4.7.0")
+    compileOnly("com.velocitypowered:velocity-api:3.2.0-SNAPSHOT")
+    compileOnly("com.velocitypowered:velocity-proxy:3.2.0-SNAPSHOT")
+    compileOnly("com.velocitypowered:velocity-native:3.2.0-SNAPSHOT")
+    compileOnly('com.github.spotbugs:spotbugs-annotations:4.7.3')
     // Needs for some velocity methods.
-    compileOnly("io.netty:netty-codec:4.1.77.Final")
-    compileOnly("io.netty:netty-handler:4.1.77.Final")
-    compileOnly("io.netty:netty-transport-native-epoll:4.1.77.Final")
-    compileOnly("it.unimi.dsi:fastutil-core:8.5.8")
+    compileOnly('io.netty:netty-codec:4.1.86.Final')
+    compileOnly("io.netty:netty-handler:4.1.86.Final")
+    compileOnly("io.netty:netty-transport-native-epoll:4.1.86.Final")
+    compileOnly('it.unimi.dsi:fastutil-core:8.5.11')
 }
 
 license {
